--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -36,20 +36,20 @@
 
     <div class="navbar navbar-default">
         <div class="navbar-header">
-            <a class="navbar-brand" href="https://github.com/nervgh/angular-file-upload">Angular File Upload</a>
+            <a class="navbar-brand" href="/">Student parser v1.0 alfa</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="active dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Demos <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li class="active"><a href="#">Simple example</a></li>
-                        <li><a href="../image-preview">Uploads only images (with canvas preview)</a></li>
-                        <li><a href="../without-bootstrap">Without bootstrap example</a></li>
-                    </ul>
+                    <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">Demos <b class="caret"></b></a>-->
+                    <!--<ul class="dropdown-menu">-->
+                        <!--<li class="active"><a href="#">Simple example</a></li>-->
+                        <!--<li><a href="../image-preview">Uploads only images (with canvas preview)</a></li>-->
+                        <!--<li><a href="../without-bootstrap">Without bootstrap example</a></li>-->
+                    <!--</ul>-->
                 </li>
-                <li><a href="https://github.com/nervgh/angular-file-upload">View on Github</a></li>
-                <li><a href="https://raw.githubusercontent.com/nervgh/angular-file-upload/master/dist/angular-file-upload.min.js">Download</a></li>
+                <!--<li><a href="https://github.com/nervgh/angular-file-upload">View on Github</a></li>-->
+                <!--<li><a href="https://raw.githubusercontent.com/nervgh/angular-file-upload/master/dist/angular-file-upload.min.js">Download</a></li>-->
             </ul>
         </div>
     </div>
@@ -144,7 +144,23 @@
                 </button>
             </div>
 
+
+
+            <!--<div style="padding-bottom: 20px;">-->
+
+                <!--<select>-->
+                    <!--<option>Электроник</option>-->
+                    <!--<option>Сыроежкин</option>-->
+                    <!--<option>Чижиков</option>-->
+                    <!--<option>Кукушкина</option>-->
+                <!--</select>-->
+            <!--</div>-->
+
+
         </div>
+
+
+
 
     </div>
 
@@ -154,3 +170,7 @@
 
 
 </html>
+
+<script>
+    console.log("Hello world");
+</script>
