--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -3,18 +3,18 @@
 
     <head>
         <title>Simple example</title>
-        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
 
         <!-- Fix for old browsers -->
-        <script src="http://nervgh.github.io/js/es5-shim.min.js"></script>
-        <script src="http://nervgh.github.io/js/es5-sham.min.js"></script>
-        <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+        <script src="https://nervgh.github.io/js/es5-shim.min.js"></script>
+        <script src="https://nervgh.github.io/js/es5-sham.min.js"></script>
+        <script src="https://code.jquery.com/jquery-1.8.3.min.js"></script>
         <script src="../console-sham.js"></script>
 
-        <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+        <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
         <!--<script src="../bower_components/angular/angular.js"></script>-->
-        <script src="http://code.angularjs.org/1.2.0/angular.min.js"></script>
+        <script src="https://code.angularjs.org/1.2.0/angular.min.js"></script>
         <script src="/angular-file-upload.min.js"></script>
         <script src="controllers.js"></script>
 
@@ -48,8 +48,8 @@
                         <!--<li><a href="../without-bootstrap">Without bootstrap example</a></li>-->
                     <!--</ul>-->
                 </li>
-                <!--<li><a href="https://github.com/nervgh/angular-file-upload">View on Github</a></li>-->
-                <!--<li><a href="https://raw.githubusercontent.com/nervgh/angular-file-upload/master/dist/angular-file-upload.min.js">Download</a></li>-->
+                <!--<li><a href="httpss://github.com/nervgh/angular-file-upload">View on Github</a></li>-->
+                <!--<li><a href="httpss://raw.githubusercontent.com/nervgh/angular-file-upload/master/dist/angular-file-upload.min.js">Download</a></li>-->
             </ul>
         </div>
     </div>
